--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@tensorflow-models/face-landmarks-detection": "^0.0.3",
     "@tensorflow/tfjs-backend-webgl": "^3.6.0",
     "@tensorflow/tfjs-converter": "^3.6.0",
     "@tensorflow/tfjs-core": "^3.6.0",
+    "@types/pixelmatch": "^5.2.6",
     "@types/react-webcam": "^3.0.0",
+    "jimp": "^0.22.10",
     "next": "14.0.4",
+    "pixelmatch": "^5.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-webcam": "^7.2.0"
