--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tensorflow-models/face-landmarks-detection": "^0.0.3",
-    "@tensorflow/tfjs-backend-webgl": "^3.6.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^3.21.0",
     "@tensorflow/tfjs-converter": "^3.6.0",
     "@tensorflow/tfjs-core": "^3.6.0",
     "@types/pixelmatch": "^5.2.6",
     "@types/react-webcam": "^3.0.0",
+    "face-api.js": "^0.22.2",
     "jimp": "^0.22.10",
     "next": "14.0.4",
     "pixelmatch": "^5.3.0",
@@ -34,5 +36,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.9.1+sha512.f95ce356460e05be48d66401c1ae64ef84d163dd689964962c6888a9810865e39097a5e9de748876c2e0bf89b232d583c33982773e9903ae7a76257270986538"
 }
